# OneBase

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FournisseurEOT.csv  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test.db
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  logging_config.py  main.py  rate_limit.py
backend/scripts/: backfill_dq.py  backfill_unified_embeddings.py  seed_record_type_sources.py
backend/tests/: __init__.py  conftest.py  test_app_metadata.py  test_ask.py  test_ask_view.py  test_audit.py  test_auth.py  test_batch_model.py  test_bcrypt_migration.py  test_blocking.py  test_blocking_placeholder_quarantine.py  test_canonical_api.py  test_canonical_fields.py  test_clustering.py  test_column_guesser.py  test_comparison_model.py  test_comparison_router.py  test_comparison_service.py  test_comparison_task.py  test_config.py  test_cors.py  test_csv_parser.py  test_database.py  test_dq.py  test_embedding.py  test_enums.py  test_file_checks.py  test_file_format_util.py  test_force_replace.py  test_get_or_404.py  test_grouping.py  test_ingestion_diff.py  test_ingestion_identifier_normalize.py  test_ingestion_task.py  test_insights.py  test_llm_service.py  test_match_bank_data.py  test_match_client_data.py  test_match_model.py  test_match_router.py  (+47 more)
(+346 files in other folders)
